# Tensorflow-GAN

./: README.md  pyproject.toml
gan/: gan.py
